Fix: 자바 버전 이슈. getFirst() -> get(0)